# drill_mpub_papers

./: .gitignore  README.md  lambda_function.py  pyproject.toml  run_extraction.py
scripts/: run_extraction.py
src/hcc_bclc_extractor/: db.py  extractor.py  handler.py  pdf_text.py  pipeline.py  prompts.py  pubmed.py  schema.py
src/hcc_bclc_extractor/sql/: schema.sql
tests/: test_extraction_smoke.py  test_golden_outputs.py  test_schema_validation.py
tests/fixtures/: sample_article_1.expected.json  sample_article_1.txt
